Update meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Personal Kanban Board" />
+    <meta name="author" content="Nishant Painter" />
+    <meta name="description" content="Offline Personal Kanban Board" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Personal Kanban - Offline Personal Kanban Board</title>
