Add hindi showcase

--- a/public/showcase_in.html
+++ b/public/showcase_in.html
@@ -156,7 +156,7 @@
       }
 
       .readme-logo {
-        height: 110px;
+        height: 140px;
       }
 
       .readme-gif {
@@ -174,7 +174,7 @@
         }
 
         .readme-logo {
-          height: 80px;
+          height: 100px;
         }
 
         .readme-gif {
@@ -196,7 +196,7 @@
       </ul>
     </div>
     <div id="content">
-      <img src="./readme_logo.png" class="readme-logo" alt="logo" />
+      <img src="./readme_logo_in.png" class="readme-logo" alt="logo" />
       <p align="center" class="primary-text">
         <a href="./showcase.html" class="pointer primary-text">English</a
         >&nbsp;-&nbsp; <a class="pointer primary-text">Français</a>&nbsp;-&nbsp;
@@ -211,8 +211,8 @@
       <img src="./description.gif" class="shadow mt-1 mb-1 readme-gif" />
       <p align="center">
         <strong
-          >A virtual offline Kanban Board for your personal projects and work
-          flows.
+          >आपकी व्यक्तिगत परियोजनाओं और कार्य प्रवाह के लिए एक आभासी ऑफ़लाइन
+          कानबन बोर्ड।
         </strong>
       </p>
 
@@ -220,70 +220,72 @@
         <strong>
           <span class="primary-text"
             ><a href="https://personalkanban.js.org" target="_blank"
-              >Personal Kanban</a
+              >पर्सनल कानबन</a
             ></span
           ></strong
         >
-        is an offline capable application or tool that implements kanban to
-        manage work at personal level. Work items can be represented as records
-        and columns to depict each stage of your work process.
+        एक ऑफ़लाइन सक्षम अनुप्रयोग या उपकरण है जो व्यक्तिगत स्तर पर कार्य का
+        प्रबंधन करने के लिए कानबन को लागू करता है। कार्य आइटम को आपकी कार्य
+        प्रक्रिया के प्रत्येक चरण को दर्शाने के लिए रिकॉर्ड और कॉलम के रूप में
+        दर्शाया जा सकता है।
         <strong
           ><i
-            >Columns can be as simple as "todo", "in-progress" and "done", or it
-            can be complex to suit your flow.</i
+            >कॉलम "टूडू", "इन-प्रोग्रेस" और "किया" जैसे सरल हो सकते हैं, या यह
+            आपके प्रवाह के अनुरूप जटिल हो सकते हैं।</i
           ></strong
         >
       </p>
       <p>
-        It's a tool to visualize and optimize your workflow. Physical boards are
-        popular among few, while virtual boards like
+        यह आपके वर्कफ़्लो की कल्पना और अनुकूलन करने का एक उपकरण है। भौतिक बोर्ड
+        कुछ के बीच लोकप्रिय हैं, जबकि
         <strong
           ><i
-            >Personal Kanban play a critical role in agile software development
-            considering its accessibility, simplicity and elegant display.</i
+            >पर्सनल कानबन जैसे आभासी बोर्ड अपनी पहुंच, सादगी और सुरुचिपूर्ण
+            प्रदर्शन को देखते हुए चुस्त सॉफ्टवेयर विकास में महत्वपूर्ण भूमिका
+            निभाते हैं।</i
           ></strong
         >
-        Regardless of whether a board is physical or virtual, it must depict
-        work visually along with clearly identifying the blockage and other
-        dependencies. Each of these features are offered seamlessly by Personal
-        Kanban.
+        भले ही कोई बोर्ड भौतिक या आभासी हो, उसे रुकावट और अन्य निर्भरताओं की
+        स्पष्ट रूप से पहचान करने के साथ-साथ नेत्रहीन रूप से काम करना चाहिए।
+        इनमें से प्रत्येक सुविधाएँ पर्सनल कानबन द्वारा मूल रूप से पेश की जाती
+        हैं।
       </p>
 
       <p>
-        Plan your work with flexibility, identify and resolve bottlenecks and
-        overview your complete work visually.
+        लचीलेपन के साथ अपने काम की योजना बनाएं, बाधाओं को पहचानें और हल करें और
+        अपना पूरा काम नेत्रहीन करें।
       </p>
       <a
         class="primary-button"
         href="https://personalkanban.js.org/"
         target="_blank"
-        >Start Using Now</a
+        >अभी उपयोग करना शुरू करें</a
       >
       <div>
-        <h3>Features</h3>
+        <h3>विशेषताएं</h3>
         <p>
-          A few of the things you can do with Personal Kanban:
+          कुछ चीजें जो आप पर्सनल कानबन के साथ कर सकते हैं:
         </p>
         <ul>
-          <li>Add, Edit, Delete Columns</li>
-          <li>Move Columns</li>
-          <li>Add, Edit, Delete Records</li>
-          <li>Move Records</li>
-          <li>Restrict WIP limits for Columns</li>
-          <li>Manage Column and Records Background Colors</li>
-          <li>Clear Board</li>
-          <li>Dark Mode</li>
-          <li>Localization Support</li>
-          <li>Offline capable</li>
-          <li>Offline local storage</li>
+          <li>कॉलम जोड़ें, संपादित करें, हटाएं</li>
+          <li>कॉलम को स्थानांतरित करें</li>
+          <li>रिकॉर्ड जोड़ें, संपादित करें, हटाएं</li>
+          <li>रिकॉर्ड को स्थानांतरित करें</li>
+          <li>कॉलम के लिए WIP सीमा सीमित करें</li>
+          <li>स्तंभ और रिकॉर्ड्स पृष्ठभूमि रंग प्रबंधित करें</li>
+          <li>बोर्ड मिटाएँ</li>
+          <li>डार्क मोड</li>
+          <li>स्थानीयकरण समर्थन</li>
+          <li>ऑफ़लाइन सक्षम</li>
+          <li>ऑफलाइन स्थानीय भंडारण</li>
         </ul>
       </div>
       <div>
-        <h3>Privacy and Usage</h3>
+        <h3>प्राइवेसी और उपयोग</h3>
         <p>
-          The application makes use of browser local storage for persisting your
-          work columns & records and does not store any personal kanban data on
-          any sort of server.
+          एप्लिकेशन आपके काम के कॉलम और रिकॉर्ड को बनाए रखने के लिए स्थानीय
+          भंडारण का उपयोग करता है और किसी भी प्रकार के सर्वर पर किसी भी पर्सनल
+          कानबन डेटा को संग्रहीत नहीं करता है।
         </p>
       </div>
     </div>
