--- a/public/showcase.html
+++ b/public/showcase.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Personal Kanban</title>
+    <title>Personal Kanban - Offline Personal Kanban Board</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
@@ -205,7 +205,7 @@
         <a class="pointer primary-text">Deutsche</a>&nbsp;-&nbsp;
         <a href="./showcase_in.html" class="pointer primary-text">हिंदी</a
         >&nbsp;-&nbsp; <a class="pointer primary-text">中文</a>&nbsp;-&nbsp;
-        <a class="pointer primary-text">日本人</a>
+        <a href="./showcase_jp.html" class="pointer primary-text">日本人</a>
       </p>
 
       <img src="./description.gif" class="shadow mt-1 mb-1 readme-gif" />
