Update hindi showcase

--- a/public/showcase_in.html
+++ b/public/showcase_in.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Personal Kanban</title>
+    <title>पर्सनल कानबन - ऑफ़लाइन पर्सनल कानबन बोर्ड</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
