--- a/public/showcase.html
+++ b/public/showcase.html
@@ -199,12 +199,19 @@
       <img src="./readme_logo.png" class="readme-logo" alt="logo" />
       <p align="center" class="primary-text">
         <a href="./showcase.html" class="pointer primary-text">English</a
-        >&nbsp;-&nbsp; <a class="pointer primary-text">Français</a>&nbsp;-&nbsp;
-        <a class="pointer primary-text">Español</a>&nbsp;-&nbsp;
-        <a class="pointer primary-text">Pусский</a>&nbsp;-&nbsp;
-        <a class="pointer primary-text">Deutsche</a>&nbsp;-&nbsp;
+        >&nbsp;-&nbsp;
+        <a href="./showcase_fr.html" class="pointer primary-text">Français</a
+        >&nbsp;-&nbsp;
+        <a href="./showcase_es.html" class="pointer primary-text">Español</a
+        >&nbsp;-&nbsp;
+        <a href="./showcase_ru.html" class="pointer primary-text">Pусский</a
+        >&nbsp;-&nbsp;
+        <a href="./showcase_de.html" class="pointer primary-text">Deutsche</a
+        >&nbsp;-&nbsp;
         <a href="./showcase_in.html" class="pointer primary-text">हिंदी</a
-        >&nbsp;-&nbsp; <a class="pointer primary-text">中文</a>&nbsp;-&nbsp;
+        >&nbsp;-&nbsp;
+        <a href="./showcase_cn.html" class="pointer primary-text">中文</a
+        >&nbsp;-&nbsp;
         <a href="./showcase_jp.html" class="pointer primary-text">日本人</a>
       </p>
 
