--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,43 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#795548" />
     <meta name="author" content="Nishant Painter" />
-    <meta name="description" content="Offline Personal Kanban Board" />
+    <meta
+      name="description"
+      content="A virtual offline Kanban Board for your personal projects and work
+      flows."
+    />
+    <meta name="application-name" content="Personal Kanban" />
+    <meta
+      name="keywords"
+      content="board, kanban board, personal kanban board, kanban, personal kanban, offline kanban, agile, agile development, project management, workflow management, offline, pwa, desktop, mobile, android, ios, workflows, dailymanager"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+
+    <!--Facebook OG-->
+    <meta property="og:url" content="https://personalkanban.js.org/" />
+    <meta property="og:type" content="application" />
+    <meta
+      property="og:title"
+      content="Personal Kanban - Offline Personal Kanban Board"
+    />
+    <meta
+      property="og:description"
+      content="A virtual offline Kanban Board for your personal projects and work
+      flows."
+    />
+    <meta
+      property="og:image"
+      content="https://personalkanban.js.org/logo192.png"
+    />
+
+    <!-- Twitter OG-->
+    <meta name="twitter:card" content="Personal Kanban" />
+    <meta name="twitter:site" content="https://personalkanban.js.org/" />
+    <meta name="twitter:creator" content="Nishant Painter" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Personal Kanban - Offline Personal Kanban Board</title>
