Update showcase meta tags

--- a/public/showcase_cn.html
+++ b/public/showcase_cn.html
@@ -4,6 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>个人看板 - 离线个人看板</title>
+
+    <meta name="theme-color" content="#795548" />
+    <meta name="author" content="Nishant Painter" />
+    <meta
+      name="description"
+      content="用于您的个人项目和工作流程的虚拟脱机看板。"
+    />
+    <meta name="application-name" content="个人看板" />
+    <meta
+      name="keywords"
+      content="
+      董事会，看板，个人看板，看板，个人看板，离线看板，敏捷，敏捷开发，项目管理，工作流管理，离线，pwa，桌面，移动，android，ios，工作流，dailymanager"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="zh-Hans" />
+
+    <!--Facebook OG-->
+    <meta property="og:url" content="https://personalkanban.js.org/" />
+    <meta property="og:type" content="应用" />
+    <meta property="og:title" content="个人看板 - 离线个人看板" />
+    <meta
+      property="og:description"
+      content="用于您的个人项目和工作流程的虚拟脱机看板。"
+    />
+    <meta
+      property="og:image"
+      content="https://personalkanban.js.org/logo192.png"
+    />
+
+    <!-- Twitter OG-->
+    <meta name="twitter:card" content="个人看板" />
+    <meta name="twitter:site" content="https://personalkanban.js.org/" />
+    <meta name="twitter:creator" content="Nishant Painter" />
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
