--- a/public/showcase_de.html
+++ b/public/showcase_de.html
@@ -4,6 +4,43 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Persönliches Kanban - Offline Persönliches Kanban Tafel</title>
+
+    <meta name="theme-color" content="#795548" />
+    <meta name="author" content="Nishant Painter" />
+    <meta
+      name="description"
+      content="Ein virtuelles Offline-Kanban-Board für Ihre persönlichen Projekte und Arbeitsabläufe."
+    />
+    <meta name="application-name" content="Persönliches Kanban" />
+    <meta
+      name="keywords"
+      content="Board, Kanban Board, persönliches Kanban Board, Kanban, persönliches Kanban, Offline Kanban, Agile, Agile Entwicklung, Projektmanagement, Workflow Management, Offline, Pwa, Desktop, Mobile, Android, iOS, Workflows, Daily Manager"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="de" />
+
+    <!--Facebook OG-->
+    <meta property="og:url" content="https://personalkanban.js.org/" />
+    <meta property="og:type" content="application" />
+    <meta
+      property="og:title"
+      content="Persönliches Kanban - Offline Persönliches Kanban Tafel"
+    />
+    <meta
+      property="og:description"
+      content="Ein virtuelles Offline-Kanban-Board für Ihre persönlichen Projekte und Arbeitsabläufe.
+      flows."
+    />
+    <meta
+      property="og:image"
+      content="https://personalkanban.js.org/logo192.png"
+    />
+
+    <!-- Twitter OG-->
+    <meta name="twitter:card" content="Persönliches Kanban" />
+    <meta name="twitter:site" content="https://personalkanban.js.org/" />
+    <meta name="twitter:creator" content="Nishant Painter" />
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
