--- a/public/showcase_es.html
+++ b/public/showcase_es.html
@@ -4,6 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kanban personal - Tablero Kanban personal sin conexión</title>
+
+    <meta name="theme-color" content="#795548" />
+    <meta name="author" content="Nishant Painter" />
+    <meta
+      name="description"
+      content="Un tablero Kanban virtual fuera de línea para sus proyectos personales y flujos de trabajo."
+    />
+    <meta name="application-name" content="Kanban personal" />
+    <meta
+      name="keywords"
+      content="tablero, tablero kanban, tablero kanban personal, kanban, kanban personal, kanban fuera de línea, ágil, desarrollo ágil, gestión de proyectos, gestión del flujo de trabajo, fuera de línea, pwa, escritorio, móvil, android, ios, flujos de trabajo, dailymanager"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="es" />
+
+    <!--Facebook OG-->
+    <meta property="og:url" content="https://personalkanban.js.org/" />
+    <meta property="og:type" content="application" />
+    <meta
+      property="og:title"
+      content="Kanban personal - Tablero Kanban personal sin conexión"
+    />
+    <meta
+      property="og:description"
+      content="Un tablero Kanban virtual fuera de línea para sus proyectos personales y flujos de trabajo."
+    />
+    <meta
+      property="og:image"
+      content="https://personalkanban.js.org/logo192.png"
+    />
+
+    <!-- Twitter OG-->
+    <meta name="twitter:card" content="Kanban personal" />
+    <meta name="twitter:site" content="https://personalkanban.js.org/" />
+    <meta name="twitter:creator" content="Nishant Painter" />
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
