--- a/public/showcase_fr.html
+++ b/public/showcase_fr.html
@@ -4,6 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kanban personnel - Tableau Kanban personnel hors ligne</title>
+
+    <meta name="theme-color" content="#795548" />
+    <meta name="author" content="Nishant Painter" />
+    <meta
+      name="description"
+      content="Un tableau Kanban virtuel hors ligne pour vos projets personnels et vos flux de travail."
+    />
+    <meta name="application-name" content="Kanban personnel" />
+    <meta
+      name="keywords"
+      content="tableau, tableau kanban, tableau kanban personnel, kanban, kanban personnel, kanban hors ligne, agile, développement agile, gestion de projet, gestion de flux de travail, hors ligne, pwa, ordinateur de bureau, mobile, Android, ios, workflows, dailymanager"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="fr" />
+
+    <!--Facebook OG-->
+    <meta property="og:url" content="https://personalkanban.js.org/" />
+    <meta property="og:type" content="application" />
+    <meta
+      property="og:title"
+      content="Kanban personnel - Tableau Kanban personnel hors ligne"
+    />
+    <meta
+      property="og:description"
+      content="Un tableau Kanban virtuel hors ligne pour vos projets personnels et vos flux de travail."
+    />
+    <meta
+      property="og:image"
+      content="https://personalkanban.js.org/logo192.png"
+    />
+
+    <!-- Twitter OG-->
+    <meta name="twitter:card" content="Kanban personnel" />
+    <meta name="twitter:site" content="https://personalkanban.js.org/" />
+    <meta name="twitter:creator" content="Nishant Painter" />
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
