--- a/public/showcase_in.html
+++ b/public/showcase_in.html
@@ -4,6 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>पर्सनल कानबन - ऑफ़लाइन पर्सनल कानबन बोर्ड</title>
+
+    <meta name="theme-color" content="#795548" />
+    <meta name="author" content="Nishant Painter" />
+    <meta
+      name="description"
+      content="आपकी व्यक्तिगत परियोजनाओं और कार्य प्रवाह के लिए एक आभासी ऑफ़लाइन कानबन बोर्ड।"
+    />
+    <meta name="application-name" content="पर्सनल कानबन" />
+    <meta
+      name="keywords"
+      content="बोर्ड, कानबन बोर्ड, व्यक्तिगत कानबन बोर्ड, कानबन, व्यक्तिगत कानबन, ऑफ़लाइन कानबन, चुस्त, फुर्तीली विकास, परियोजना प्रबंधन, वर्कफ़्लो प्रबंधन, ऑफ़लाइन, पवा, डेस्कटॉप, मोबाइल, Android, आईओएस, वर्कफ़्लो, dailymanager"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="hi" />
+
+    <!--Facebook OG-->
+    <meta property="og:url" content="https://personalkanban.js.org/" />
+    <meta property="og:type" content="application" />
+    <meta
+      property="og:title"
+      content="पर्सनल कानबन - ऑफ़लाइन पर्सनल कानबन बोर्ड"
+    />
+    <meta
+      property="og:description"
+      content="आपकी व्यक्तिगत परियोजनाओं और कार्य प्रवाह के लिए एक आभासी ऑफ़लाइन कानबन बोर्ड।"
+    />
+    <meta
+      property="og:image"
+      content="https://personalkanban.js.org/logo192.png"
+    />
+
+    <!-- Twitter OG-->
+    <meta name="twitter:card" content="पर्सनल कानबन" />
+    <meta name="twitter:site" content="https://personalkanban.js.org/" />
+    <meta name="twitter:creator" content="Nishant Painter" />
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
