--- a/public/showcase_jp.html
+++ b/public/showcase_jp.html
@@ -4,6 +4,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>個人かんばん - オフラインパーソナルかんばんボード</title>
+    <meta name="theme-color" content="#795548" />
+    <meta name="author" content="Nishant Painter" />
+    <meta
+      name="description"
+      content="個人的なプロジェクトやワークフローのための仮想オフラインかんばんボード。"
+    />
+    <meta name="application-name" content="個人かんばん" />
+    <meta
+      name="keywords"
+      content="ボード、かんばんボード、個人かんばんボード、かんばん、個人かんばん、オフラインかんばん、アジャイル、アジャイル開発、プロジェクト管理、ワークフロー管理、オフライン、pwa、デスクトップ、モバイル、android、ios、ワークフロー、dailymanager"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="ja" />
+
+    <!--Facebook OG-->
+    <meta property="og:url" content="https://personalkanban.js.org/" />
+    <meta property="og:type" content="application" />
+    <meta
+      property="og:title"
+      content="個人かんばん - オフラインパーソナルかんばんボード"
+    />
+    <meta
+      property="og:description"
+      content="個人的なプロジェクトやワークフローのための仮想オフラインかんばんボード。"
+    />
+    <meta
+      property="og:image"
+      content="https://personalkanban.js.org/logo192.png"
+    />
+
+    <!-- Twitter OG-->
+    <meta name="twitter:card" content="個人かんばん" />
+    <meta name="twitter:site" content="https://personalkanban.js.org/" />
+    <meta name="twitter:creator" content="Nishant Painter" />
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
