--- a/public/showcase_ru.html
+++ b/public/showcase_ru.html
@@ -4,6 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Персональный Канбан - Автономный персональный канбан Доска</title>
+
+    <meta name="theme-color" content="#795548" />
+    <meta name="author" content="Nishant Painter" />
+    <meta
+      name="description"
+      content="Виртуальная оффлайн доска Канбан для ваших личных проектов и рабочих процессов."
+    />
+    <meta name="application-name" content="Персональный Канбан" />
+    <meta
+      name="keywords"
+      content="доска, доска канбан, личная доска канбан, канбан, личный канбан, автономный канбан, гибкая, гибкая разработка, управление проектами, управление рабочим процессом, офлайн, pwa, рабочий стол, мобильный, android, iOS, рабочие процессы, dailymanager"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="ru" />
+
+    <!--Facebook OG-->
+    <meta property="og:url" content="https://personalkanban.js.org/" />
+    <meta property="og:type" content="application" />
+    <meta
+      property="og:title"
+      content="Персональный Канбан - Автономный персональный канбан Доска"
+    />
+    <meta
+      property="og:description"
+      content="Виртуальная оффлайн доска Канбан для ваших личных проектов и рабочих процессов."
+    />
+    <meta
+      property="og:image"
+      content="https://personalkanban.js.org/logo192.png"
+    />
+
+    <!-- Twitter OG-->
+    <meta name="twitter:card" content="Персональный Канбан" />
+    <meta name="twitter:site" content="https://personalkanban.js.org/" />
+    <meta name="twitter:creator" content="Nishant Painter" />
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
