--- a/public/showcase_jp.html
+++ b/public/showcase_jp.html
@@ -191,7 +191,11 @@
       }
 
       .readme-logo {
-        height: 150px;
+        height: 120px;
+        background: url("./readme_logo_jp.png");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain;
       }
 
       .readme-gif {
@@ -206,10 +210,6 @@
         #content {
           padding: 16px;
           padding-top: 60px;
-        }
-
-        .readme-logo {
-          height: 100px;
         }
 
         .readme-gif {
@@ -231,7 +231,7 @@
       </ul>
     </div>
     <div id="content">
-      <img src="./readme_logo_jp.png" class="readme-logo" alt="logo" />
+      <div class="readme-logo"></div>
       <p align="center" class="primary-text">
         <a href="./showcase.html" class="pointer primary-text">English</a
         >&nbsp;-&nbsp;
