--- a/public/showcase_es.html
+++ b/public/showcase_es.html
@@ -193,8 +193,11 @@
 
       .readme-logo {
         height: 120px;
+        background: url("./readme_logo_es.png");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain;
       }
-
       .readme-gif {
         height: 220px;
       }
@@ -207,10 +210,6 @@
         #content {
           padding: 16px;
           padding-top: 60px;
-        }
-
-        .readme-logo {
-          height: 90px;
         }
 
         .readme-gif {
@@ -232,7 +231,7 @@
       </ul>
     </div>
     <div id="content">
-      <img src="./readme_logo_es.png" class="readme-logo" alt="logo" />
+      <div class="readme-logo"></div>
       <p align="center" class="primary-text">
         <a href="./showcase.html" class="pointer primary-text">English</a
         >&nbsp;-&nbsp;
