--- a/public/showcase_ru.html
+++ b/public/showcase_ru.html
@@ -192,7 +192,11 @@
       }
 
       .readme-logo {
-        height: 110px;
+        height: 120px;
+        background: url("./readme_logo_ru.png");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain;
       }
 
       .readme-gif {
@@ -207,10 +211,6 @@
         #content {
           padding: 16px;
           padding-top: 60px;
-        }
-
-        .readme-logo {
-          height: 80px;
         }
 
         .readme-gif {
@@ -232,7 +232,7 @@
       </ul>
     </div>
     <div id="content">
-      <img src="./readme_logo_ru.png" class="readme-logo" alt="logo" />
+      <div class="readme-logo"></div>
       <p align="center" class="primary-text">
         <a href="./showcase.html" class="pointer primary-text">English</a
         >&nbsp;-&nbsp;
