--- a/public/showcase_fr.html
+++ b/public/showcase_fr.html
@@ -221,7 +221,9 @@
   </head>
   <body>
     <div id="header">
-      <img src="./readme_logo.png" alt="Logo" height="40" />
+      <a href="https://personalkanban.js.org/" target="_blank"
+        ><img src="./readme_logo.png" alt="Logo" height="40"
+      /></a>
       <div class="grow"></div>
       <ul>
         <li class="github-li">
