--- a/public/showcase_jp.html
+++ b/public/showcase_jp.html
@@ -202,7 +202,8 @@
         height: 220px;
       }
 
-      .github-li {
+      .github-li,
+      .header-logo {
         margin-top: 5px;
       }
 
@@ -221,7 +222,11 @@
   <body>
     <div id="header">
       <a href="https://personalkanban.js.org/" target="_blank"
-        ><img src="./readme_logo.png" alt="Logo" height="40"
+        ><img
+          src="./readme_logo.png"
+          class="header-logo"
+          alt="Logo"
+          height="40"
       /></a>
       <div class="grow"></div>
       <ul>
