Fix showcase JP language link

--- a/public/showcase.html
+++ b/public/showcase.html
@@ -256,7 +256,7 @@
         >&nbsp;-&nbsp;
         <a href="./showcase_cn.html" class="pointer primary-text">中文</a
         >&nbsp;-&nbsp;
-        <a href="./showcase_jp.html" class="pointer primary-text">日本人</a>
+        <a href="./showcase_jp.html" class="pointer primary-text">日本語</a>
       </p>
 
       <img src="./description.gif" class="shadow mt-1 mb-1 readme-gif" />
