Add share buttons

--- a/public/showcase_ru.html
+++ b/public/showcase_ru.html
@@ -312,6 +312,34 @@
         target="_blank"
         >Начни использовать сейчас</a
       >
+      <p>
+        <br />
+        <iframe
+          src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fpersonalkanban.js.org%2Fshowcase.html&layout=button&size=small&width=67&height=20&appId"
+          width="67"
+          height="20"
+          style="border: none; overflow: hidden;"
+          scrolling="no"
+          frameborder="0"
+          allowfullscreen="true"
+          allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
+        ></iframe>
+        <a
+          href="https://twitter.com/share?ref_src=twsrc%5Etfw"
+          class="twitter-share-button"
+          data-text="Personal Kanban: Offline-first kanban board for project and work flow management."
+          data-url="https://personalkanban.js.org/showcase.html"
+          data-hashtags="personalkanban,kanban,agile,kanbanboard,board,productivity,timemanagement,projectmanagement,personal,offline,react,pwa"
+          data-show-count="false"
+          >Tweet</a
+        >
+        <script
+          async
+          src="https://platform.twitter.com/widgets.js"
+          charset="utf-8"
+        ></script>
+        <br />
+      </p>
       <div>
         <h3>
           Особенности
