Add github button

--- a/public/showcase_in.html
+++ b/public/showcase_in.html
@@ -338,6 +338,15 @@
           charset="utf-8"
         ></script>
         <br />
+        <a
+          class="github-button"
+          href="https://github.com/nishantpainter/personal-kanban"
+          data-show-count="true"
+          aria-label="Star nishantpainter/personal-kanban on GitHub"
+          >Star</a
+        >
+        <script async defer src="https://buttons.github.io/buttons.js"></script>
+        <br />
       </p>
       <div>
         <h3>विशेषताएं</h3>
