--- a/public/showcase_cn.html
+++ b/public/showcase_cn.html
@@ -323,6 +323,15 @@
           charset="utf-8"
         ></script>
         <br />
+        <a
+          class="github-button"
+          href="https://github.com/nishantpainter/personal-kanban"
+          data-show-count="true"
+          aria-label="Star nishantpainter/personal-kanban on GitHub"
+          >Star</a
+        >
+        <script async defer src="https://buttons.github.io/buttons.js"></script>
+        <br />
       </p>
       <div>
         <h3>特征</h3>
