Add hn vote link

--- a/public/showcase_fr.html
+++ b/public/showcase_fr.html
@@ -351,6 +351,10 @@
         >
         <script async defer src="https://buttons.github.io/buttons.js"></script>
         <br />
+        <a href="https://news.ycombinator.com/vote?id=25430325&how=up&goto=show"
+          ><img src="./hn.png" height="20" alt="HN Logo"
+        /></a>
+        <br />
       </p>
       <div>
         <h3>Traits</h3>
