Add feedback form

--- a/public/showcase.html
+++ b/public/showcase.html
@@ -378,6 +378,20 @@
           any sort of server.
         </p>
       </div>
+      <div style="margin-bottom: 16px;">
+        <h3>Feedback or Suggestion</h3>
+        <p>
+          Kindly submit your feedbacks or suggestion for any improvements, bugs
+          and fixes.
+        </p>
+        <a
+          href="https://forms.gle/vAvhgyshwvxrvvCE8"
+          class="primary-button"
+          target="_blank"
+          style="margin-right: auto; margin-left: auto;"
+          >Submit Now</a
+        >
+      </div>
     </div>
     <div id="footer" class="shadow">
       <p align="center">
