--- a/public/showcase_cn.html
+++ b/public/showcase_cn.html
@@ -374,6 +374,19 @@
           该应用程序利用浏览器本地存储来保留您的工作列和记录，并且不会在任何类型的服务器上存储任何个人看板数据。
         </p>
       </div>
+      <div style="margin-bottom: 16px;">
+        <h3>反馈或建议</h3>
+        <p>
+          请提交您的反馈意见或建议，以获取任何改进，错误和修复。
+        </p>
+        <a
+          href="https://forms.gle/vAvhgyshwvxrvvCE8"
+          class="primary-button"
+          target="_blank"
+          style="margin-right: auto; margin-left: auto;"
+          >现在提交</a
+        >
+      </div>
     </div>
     <div id="footer" class="shadow">
       <p align="center">
