--- a/public/showcase_de.html
+++ b/public/showcase_de.html
@@ -392,6 +392,20 @@
           Kanban-Daten auf einem Server.
         </p>
       </div>
+      <div style="margin-bottom: 16px;">
+        <h3>Feedback oder Vorschlag</h3>
+        <p>
+          Bitte senden Sie Ihr Feedback oder Ihren Vorschlag für Verbesserungen,
+          Fehler und Korrekturen.
+        </p>
+        <a
+          href="https://forms.gle/vAvhgyshwvxrvvCE8"
+          class="primary-button"
+          target="_blank"
+          style="margin-right: auto; margin-left: auto;"
+          >Jetzt Absenden</a
+        >
+      </div>
     </div>
     <div id="footer" class="shadow">
       <p align="center">
