--- a/public/showcase_es.html
+++ b/public/showcase_es.html
@@ -391,6 +391,20 @@
           personal en ningún tipo de servidor.
         </p>
       </div>
+      <div style="margin-bottom: 16px;">
+        <h3>Comentarios o sugerencias</h3>
+        <p>
+          Envíe amablemente sus comentarios o sugerencias para cualquier mejora,
+          error y corrección.
+        </p>
+        <a
+          href="https://forms.gle/vAvhgyshwvxrvvCE8"
+          class="primary-button"
+          target="_blank"
+          style="margin-right: auto; margin-left: auto;"
+          >Aplique ahora</a
+        >
+      </div>
     </div>
     <div id="footer" class="shadow">
       <p align="center">
