--- a/public/showcase_fr.html
+++ b/public/showcase_fr.html
@@ -397,6 +397,20 @@
           personnelle sur aucun type de serveur.
         </p>
       </div>
+      <div style="margin-bottom: 16px;">
+        <h3>Commentaires ou suggestion</h3>
+        <p>
+          Veuillez soumettre vos commentaires ou suggestions pour toute
+          amélioration, bogue et correction.
+        </p>
+        <a
+          href="https://forms.gle/vAvhgyshwvxrvvCE8"
+          class="primary-button"
+          target="_blank"
+          style="margin-right: auto; margin-left: auto;"
+          >Soumettre maintenant</a
+        >
+      </div>
     </div>
     <div id="footer" class="shadow">
       <p align="center">
