--- a/public/showcase_in.html
+++ b/public/showcase_in.html
@@ -379,6 +379,20 @@
           कानबन डेटा को संग्रहीत नहीं करता है।
         </p>
       </div>
+      <div style="margin-bottom: 16px;">
+        <h3>प्रतिक्रिया या सुझाव</h3>
+        <p>
+          कृपया किसी भी सुधार, बग और सुधार के लिए अपनी प्रतिक्रिया या सुझाव
+          प्रस्तुत करें।
+        </p>
+        <a
+          href="https://forms.gle/vAvhgyshwvxrvvCE8"
+          class="primary-button"
+          target="_blank"
+          style="margin-right: auto; margin-left: auto;"
+          >अभी जमा करे</a
+        >
+      </div>
     </div>
     <div id="footer" class="shadow">
       <p align="center">
