--- a/public/showcase_jp.html
+++ b/public/showcase_jp.html
@@ -375,6 +375,19 @@
           このアプリケーションは、ローカルストレージを使用して作業列とレコードを永続化し、個人のかんばんデータをあらゆる種類のサーバーに保存しません。
         </p>
       </div>
+      <div style="margin-bottom: 16px;">
+        <h3>フィードバックまたは提案</h3>
+        <p>
+          改善、バグ、修正については、フィードバックや提案を送信してください。
+        </p>
+        <a
+          href="https://forms.gle/vAvhgyshwvxrvvCE8"
+          class="primary-button"
+          target="_blank"
+          style="margin-right: auto; margin-left: auto;"
+          >今提出</a
+        >
+      </div>
     </div>
     <div id="footer" class="shadow">
       <p align="center">
