--- a/public/showcase_ru.html
+++ b/public/showcase_ru.html
@@ -393,6 +393,20 @@
           каком сервере.
         </p>
       </div>
+      <div style="margin-bottom: 16px;">
+        <h3>Отзыв или предложение</h3>
+        <p>
+          Пожалуйста, отправьте свой отзыв или предложение о любых улучшениях,
+          ошибках и исправлениях.
+        </p>
+        <a
+          href="https://forms.gle/vAvhgyshwvxrvvCE8"
+          class="primary-button"
+          target="_blank"
+          style="margin-right: auto; margin-left: auto;"
+          >Отправить сейчас</a
+        >
+      </div>
     </div>
     <div id="footer" class="shadow">
       <p align="center">
