Fix showcase typo

--- a/public/showcase.html
+++ b/public/showcase.html
@@ -250,7 +250,7 @@
         >&nbsp;-&nbsp;
         <a href="./showcase_ru.html" class="pointer primary-text">Pусский</a
         >&nbsp;-&nbsp;
-        <a href="./showcase_de.html" class="pointer primary-text">Deutsche</a
+        <a href="./showcase_de.html" class="pointer primary-text">Deutsch</a
         >&nbsp;-&nbsp;
         <a href="./showcase_in.html" class="pointer primary-text">हिंदी</a
         >&nbsp;-&nbsp;
